gridops/infra/network/allow-envoy-egress-to-app.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-envoy-egress-to-app
  namespace: envoy-gateway-system
specs:
  - endpointSelector:
      matchLabels:
        app.kubernetes.io/instance: eg
    egress:
      # This makes sure envoy can communicate with its other pods
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: envoy-gateway-system
              app.kubernetes.io/component: proxy
              app.kubernetes.io/name: envoy

      - toEntities:
          - kube-apiserver

  - endpointSelector:
      matchLabels:
        app.kubernetes.io/component: proxy
        app.kubernetes.io/name: envoy

    egress:
      - toEndpoints:
          - matchLabels:
              k8s:io.kubernetes.pod.namespace: app
        toPorts:
          - ports:
              - port: "80"
                protocol: TCP
